# remote-build

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.hpp  dbg.h  dll.hpp  forward.hpp  lib_remote_build.cpp  lib_remote_build.hpp  listing.cpp  listing.hpp  main.cpp  project.cpp  project.hpp
filesystem/: globber.cpp  globber.hpp
network/: communicator.cpp  communicator.hpp
